ifupdown (0.8.3) UNRELEASED; urgency=medium

  * Fix FTBFS while running the testsuite, caused by conditional call to
    settle-dad.sh. Closes: #807617

 -- Guus Sliepen <guus@debian.org>  Fri, 11 Dec 2015 10:53:54 +0100

ifupdown (0.8.2) unstable; urgency=medium

  [ Martin Pitt ]
  * Some tweaks to networking.service. Closes: #806949

  [ Guus Sliepen ]
  * Don't call udevadm settle if configuring interfaces is disabled or all
    auto interfaces are excluded.
  * Start ifupdown after sysctl.conf and modules have been loaded.
  * Don't use the -D LLT option for dhclient, some DHCP servers apparently
    don't like it. Closes: #806964
  * Clarify configuration of dual-stack interfaces.

 -- Guus Sliepen <guus@debian.org>  Fri, 04 Dec 2015 23:52:30 +0100

ifupdown (0.8.1) unstable; urgency=medium

  * Allow recursively calling ifup on the same physical interface when --force
    is used. Closes: #806888
  * Read /etc/default/networking when started from systemd. Closes: #806883

 -- Guus Sliepen <guus@debian.org>  Wed, 02 Dec 2015 23:43:46 +0100

ifupdown (0.8) unstable; urgency=medium

  [ Guus Sliepen ]
  * Add per-interface state files with locking.
    - Also detects and aborts on recursion. Closes: #231197
  * Break up main() in smaller functions.
  * Return a non-zero exit code when (de)configuring an interface fails.
    Closes: 773539
  * Add blank lines around examples in interfaces(5). Closes: #791444
  * Enable RFC 4361 DDNS support when using dhclient, as suggested by
    Nicolas Cuissard. Closes: #799257
  * Lock parent interface when configuration VLAN interfaces.
  * Apply fixes for issues found by AddressSanitizer and Clang Static
    Analyzer.
  * Drop the versioned dependency on initscripts. Closes: #804978
  * Check for errors when running mapping scripts. Closes: #246771
  * Wait for an IPv6 link-local address before starting a DHCPv6 client.
    Closes: 806673
  * Add a systemd service file.

  [ Andrew Shadura ]