@@ -1,6 +1,0 @@
-#!/bin/sh -e
-
-arch=`dpkg-architecture -qDEB_HOST_ARCH_OS`
-
-chmod a+rx debian/testbuild-$arch
-exec debian/testbuild-$arch
